feat: Make CORS origins configurable and update User entity